--- a/app/src/main/res/layout/single_item_activity.xml
+++ b/app/src/main/res/layout/single_item_activity.xml
@@ -37,24 +37,26 @@
 
         <TextView
             android:id="@+id/itemName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="220dp"
+            android:layout_height="28dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
             android:text="Item Name"
             android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"
+            android:textAlignment="center"
             android:autoSizeTextType="uniform" />
 
         <TextView
             android:id="@+id/itemCompany"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="220dp"
+            android:layout_height="20dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="26dp"
             android:text="Item Company"
             android:textColor="#000000"
+            android:textAlignment="center"
             android:textSize="14dp"
             android:textStyle="italic"
             android:autoSizeTextType="uniform" />
