--- a/app/src/main/res/layout/activity_database_add.xml
+++ b/app/src/main/res/layout/activity_database_add.xml
@@ -25,32 +25,51 @@
             android:orientation="vertical"
             android:paddingBottom="120dp">
 
-    <LinearLayout
-        android:id="@+id/foodIDLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/foodIDTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/guide_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="ID"
-            android:textSize="20dp" />
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/foodID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="ID" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/guide_sentence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Please populate all data fields per 100g!"
+                android:textColor="#7D7D7D"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/foodIDLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/guide_layout">
+
+                <TextView
+                    android:id="@+id/foodIDTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ID"
+                    android:textColor="#000000"
+                    android:textSize="20dp" />
+
+                <EditText
+                    android:id="@+id/foodID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:ems="10"
+                    android:hint="ID"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
