--- a/app/src/main/res/layout/activity_database_add.xml
+++ b/app/src/main/res/layout/activity_database_add.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -38,9 +39,12 @@
                 android:id="@+id/guide_sentence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Please populate all data fields per 100g!"
+                android:textAlignment="center"
+                android:text="Please populate all data fields per 100g,\nand leave unknown values as 0!"
                 android:textColor="#7D7D7D"
                 android:textSize="20dp" />
+
+
         </LinearLayout>
 
             <LinearLayout
@@ -177,9 +181,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:ems="10"
-            android:hint="Calories (cal)"
+            android:hint="Calories (kcal)"
             android:inputType="number"
-            app:layout_constraintStart_toEndOf="@+id/foodIDTextView"/>
+            app:layout_constraintStart_toEndOf="@+id/foodIDTextView" />
     </LinearLayout>
 
     <LinearLayout
