added loading text for singleitem, doubleitem, list_item xmls

--- a/app/src/main/res/layout/double_item_activity.xml
+++ b/app/src/main/res/layout/double_item_activity.xml
@@ -41,7 +41,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="26dp"
             android:autoSizeTextType="uniform"
-            android:text="Item Company"
+            android:text="Loading..."
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="14dp"
@@ -55,7 +55,7 @@
             android:layout_margin="6dp"
             android:autoSizeTextType="uniform"
             android:maxLines="1"
-            android:text="Item Name"
+            android:text="Loading..."
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="20dp"
@@ -97,7 +97,7 @@
             android:layout_margin="6dp"
             android:autoSizeTextType="uniform"
             android:maxLines="1"
-            android:text="Item Name"
+            android:text="Loading..."
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="20dp"
@@ -110,7 +110,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="26dp"
             android:autoSizeTextType="uniform"
-            android:text="Item Company"
+            android:text="Loading..."
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="14dp"
