--- a/app/src/main/res/layout/single_item_activity.xml
+++ b/app/src/main/res/layout/single_item_activity.xml
@@ -41,7 +41,7 @@
             android:layout_height="28dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
-            android:text="Item Name"
+            android:text="Loading..."
             android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -54,7 +54,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="26dp"
-            android:text="Item Company"
+            android:text="Loading..."
             android:textColor="#000000"
             android:textAlignment="center"
             android:textSize="14dp"
