--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -532,7 +532,7 @@
 
 
 
-                    <com.example.grocerease.CustomDatePicker
+                    <com.example.grocerease.Utils.CustomDatePicker
                         android:id="@+id/birthdayPicker"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -540,7 +540,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textViewBirthday"
-                        android:layout_marginTop="10dp"></com.example.grocerease.CustomDatePicker>
+                        android:layout_marginTop="10dp"></com.example.grocerease.Utils.CustomDatePicker>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
